# ibm3d

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  inputs.channel  inputs.lid  inputs.lid_amr  inputs.tg2d
.agent-memory/: MEMORY.md  feedback_matrixfree_decision.md  feedback_style_cxx20.md  project_algorithmic_decisions.md  project_code_layout.md  project_ib_matrixfree_plan.md  project_ibm3d_goal.md  project_verification.md  reference_dep_paths.md  reference_ibamr.md  reference_mlpoisson_sign.md  reference_perot_operator_sign.md  user_cfd_ibpm.md
scripts/: setup-agent-memory.sh
src/: CMakeLists.txt  IBGeometry.H  IBGeometry.cpp  INSSolver.H  INSSolver.cpp  INSSolver_Advect.cpp  INSSolver_BC.cpp  INSSolver_Diffuse.cpp  INSSolver_IB.cpp  INSSolver_Project.cpp  main.cpp
tests/ib_cylinder_channel/: cylinder.stl  generate_cylinder_stl.py  inputs.ib_cylinder_channel
tests/ib_plane/: inputs.ib_plane
tests/ib_plane_amr/: ib_plane.stl  inputs.ib_plane_amr
tests/tg/: inputs.tg
tests/tg2d/: inputs.tg2d
tests/tg_amr/: inputs.tg_amr
